adding by country charts for 2015

--- a/index.html
+++ b/index.html
@@ -3,11 +3,31 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Year selection</title>
+    <style>
+        .year{
+            background-color: lightcyan;
+            padding: 10px;
+            border-radius: 5px;
+            margin: auto 10px;
+        }
+        a{
+            text-decoration: none
+        }
+        .container{
+            text-align: center;
+            font-weight: bold;
+            font-size: 2em;
+            color: darkcyan;
+        }
+    </style>
 </head>
 <body>
-<div style="text-align: center; font-weight: bold; font-size: 2em; color: darkcyan;">
+<div class="container">
     <p>Please select the year below</p>
-    <p><span class="year"><a href="2015/site.html" style="text-decoration: none">2015</a></span></p>
+    <p>
+        <span class="year"><a href="2015/sites.html">2015 (by website)</a></span> |
+        <span class="year"><a href="2015/countries.html">2015 (by country)</a></span>
+    </p>
 </div>
 </body>
 </html>
