--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
     <p>Please select the year below</p>
     <p>
         <span class="year"><a href="2015/sites.html">2015 (by website)</a></span> |
-        <span class="year"><a href="2015/countries.html">2015 (by country)</a></span> |
-        <span class="year"><a href="2015/sites_by_metric.html">2015 (sites by metric)</a></span>
+        <span class="year"><a href="2015/countries.html">2015 (by country)</a></span>
     </p>
 </div>
 </body>
